# esp32-wol

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  README.md  sdkconfig.defaults
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: config.rs.template  main.rs
